# ultravox-elan

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  receiver.py  run.py
benchmark/: BENCHMARK.md  USV_BENCHMARK_DATASETS.md  rat_distressed_threshold.uvl  rat_distressed_usvseg.uvl  rat_pleasant_threshold.uvl  rat_pleasant_usvseg.uvl  run_benchmark.py
cmake/modules/: FindBbAudio.cmake
config/: ELAN.UVL  ultravox-elan.service
detector/: CMakeLists.txt  README.md  detector.cc  detector_file.cc  vcpkg.json
detector/cmake/modules/: FindBbAudio.cmake  FindUltravox.cmake
src/: main.cc
tools/: README.md  dhcp_server.py  receiver.py
